--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="es" data-theme="auto">
+<html lang="en" data-theme="auto">
 <head>
   <meta charset="utf-8">
 
-  <!-- THEME PACK: aplicar tema ANTES de pintar + tokens -->
+  <!-- THEME PACK: apply theme BEFORE paint + color tokens -->
   <script>
   (function(){
     try{
@@ -80,7 +80,7 @@
   ul{padding-left:18px}
   </style>
 
-  <!-- Favicon adaptable -->
+  <!-- Favicon that adapts to theme -->
   <link id="favicon" rel="icon" type="image/svg+xml" href="">
   <script>
     function updateFavicon(){
@@ -96,18 +96,18 @@
 
   <!-- Meta -->
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <title>Contacto — Presidency Clock</title>
-  <meta name="description" content="Cómo contactarnos: correo electrónico, pautas de comentarios y privacidad.">
-  <link rel="canonical" href="https://presidencyclock.com/es/contacts/">
+  <title>Contact — Presidency Clock</title>
+  <meta name="description" content="How to reach the Presidency Clock team: email, feedback guidelines, and privacy.">
+  <link rel="canonical" href="https://presidencyclock.com/en/contact/">
   <meta name="google-adsense-account" content="ca-pub-5023415479696725">
   <meta name="theme-color" content="#f6f8fd">
 </head>
 <body>
   <div class="wrap">
-    <!-- Cabecera con selector de tema -->
+    <!-- Header with theme switcher -->
     <div class="topbar">
       <div class="brand">
-        <a class="brand__logo" href="/es/" aria-label="Presidency Clock">
+        <a class="brand__logo" href="/en/" aria-label="Presidency Clock">
           <svg viewBox="0 0 32 32" aria-hidden="true"><g fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"><circle cx="16" cy="16" r="12"></circle><path d="M16 8v8l6 4"></path></g></svg>
         </a>
         <div class="brand__title">Presidency&nbsp;Clock</div>
@@ -115,27 +115,27 @@
 
       <div class="theme" id="themeBox">
         <button class="theme__btn" id="themeBtn" aria-haspopup="true" aria-expanded="false">
-          <span id="themeLabel">Tema: auto</span>
+          <span id="themeLabel">Theme: auto</span>
         </button>
-        <div class="theme__menu" id="themeMenu" role="menu" aria-label="Selector de tema">
-          <div class="theme__opt" data-value="auto"  role="menuitem">Auto <span class="badge">como el sistema</span></div>
-          <div class="theme__opt" data-value="light" role="menuitem">Clara</div>
-          <div class="theme__opt" data-value="dark"  role="menuitem">Oscura</div>
+        <div class="theme__menu" id="themeMenu" role="menu" aria-label="Theme switcher">
+          <div class="theme__opt" data-value="auto"  role="menuitem">Auto <span class="badge">follows OS</span></div>
+          <div class="theme__opt" data-value="light" role="menuitem">Light</div>
+          <div class="theme__opt" data-value="dark"  role="menuitem">Dark</div>
         </div>
       </div>
     </div>
 
-    <!-- Navegación -->
-    <nav class="card" aria-label="Menú principal">
-      <a href="/es/">Inicio</a> •
-      <a href="/es/presidents/">Presidentes</a> •
-      <a href="/es/digest/">Digests</a> •
-      <a href="/es/about/">Acerca de</a> •
-      <a href="/es/privacy/">Privacidad</a> •
-      <a href="/es/contacts/">Contacto</a>
+    <!-- Navigation -->
+    <nav class="card" aria-label="Main menu">
+      <a href="/en/">Home</a> •
+      <a href="/en/presidents/">Presidents</a> •
+      <a href="/en/digest/">Digests</a> •
+      <a href="/en/about/">About</a> •
+      <a href="/en/privacy/">Privacy</a> •
+      <a href="/en/contact/">Contact</a>
     </nav>
 
-    <h1>Contacto</h1>
+    <h1>Contact</h1>
 
     <div class="ad ad--top">
       <ins class="adsbygoogle" style="display:block;min-height:90px"
@@ -144,30 +144,30 @@
     </div>
 
     <section class="card">
-      <h2>Cómo contactarnos</h2>
+      <h2>How to reach us</h2>
       <p class="muted">
-        La forma más rápida es por correo: <a href="mailto:presidencyclock@gmail.com">presidencyclock@gmail.com</a>.
-        Envíanos sugerencias, reportes de errores, correcciones de traducción o propuestas de colaboración.
+        The fastest way is email: <a href="mailto:presidencyclock@gmail.com">presidencyclock@gmail.com</a>.
+        Feel free to send suggestions, bug reports, translation fixes, or partnership inquiries.
       </p>
     </section>
 
     <section class="card">
-      <h2>Qué incluir</h2>
+      <h2>What to include</h2>
       <ul>
-        <li>Enlace de la página (URL) e idioma.</li>
-        <li>Qué esperabas vs. qué viste (2–3 frases breves).</li>
-        <li>Captura de pantalla opcional si ayuda.</li>
+        <li>Link to the page (URL) and language.</li>
+        <li>What you expected vs. what you saw (2–3 short sentences).</li>
+        <li>Optional screenshot if it helps.</li>
       </ul>
     </section>
 
     <section class="card">
-      <h2>Plazo de respuesta</h2>
-      <p>Normalmente respondemos en <b>1–2 días</b>. Leemos todos los mensajes, aunque no siempre podemos responder a todos.</p>
+      <h2>Response time</h2>
+      <p>We usually reply within <b>1–2 days</b>. We read every message, but may not respond to all.</p>
     </section>
 
     <section class="card">
-      <h2>Privacidad</h2>
-      <p>Usamos tu correo solo para responderte. Más detalles en nuestra <a href="/es/privacy/">Política de privacidad</a>.</p>
+      <h2>Privacy</h2>
+      <p>We use your email only to respond. More details in our <a href="/en/privacy/">Privacy policy</a>.</p>
     </section>
 
     <div class="ad ad--bottom">
@@ -177,7 +177,7 @@
     </div>
   </div>
 
-  <!-- Lógica del selector de tema -->
+  <!-- Theme switcher logic -->
   <script>
   (function(){
     var btn  = document.getElementById('themeBtn');
@@ -185,7 +185,7 @@
     var lab  = document.getElementById('themeLabel');
 
     function currentPref(){ return (localStorage.getItem('theme')||'auto').toLowerCase(); }
-    function labelFrom(pref){ return pref==='auto' ? 'auto' : (pref==='light'?'clara':'oscura'); }
+    function labelFrom(pref){ return pref==='auto' ? 'auto' : (pref==='light'?'light':'dark'); }
 
     function applyTheme(pref){
       localStorage.setItem('theme', pref);
@@ -193,7 +193,7 @@
       var theme  = pref==='auto' ? (darkOS?'dark':'light') : pref;
       document.documentElement.setAttribute('data-theme', theme);
       document.documentElement.style.colorScheme = (theme==='dark'?'dark':'light');
-      lab.textContent = 'Tema: ' + labelFrom(pref);
+      lab.textContent = 'Theme: ' + labelFrom(pref);
       try{ updateFavicon(); }catch(_){}
     }
     function toggleMenu(open){
@@ -201,7 +201,7 @@
       menu.classList.toggle('open', willOpen);
       btn.setAttribute('aria-expanded', willOpen ? 'true' : 'false');
     }
-    lab.textContent = 'Tema: ' + labelFrom(currentPref());
+    lab.textContent = 'Theme: ' + labelFrom(currentPref());
     applyTheme(currentPref());
     btn.addEventListener('click', function(e){ e.preventDefault(); toggleMenu(); });
     menu.querySelectorAll('.theme__opt').forEach(function(opt){
@@ -215,7 +215,7 @@
   })();
   </script>
 
-  <!-- Carga de AdSense -->
+  <!-- AdSense loader -->
   <script>
     (function(){
       const s=document.createElement('script'); s.async=true;
