--- a/index.html
+++ b/index.html
@@ -1,77 +1,82 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Redirect…</title>
-  <meta name="robots" content="noindex">
-  <style>
-    html,body{height:100%}body{margin:0;display:grid;place-items:center;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
-    .box{max-width:620px;padding:24px;text-align:center}
-    a{color:#2563eb;text-decoration:none}a:hover{text-decoration:underline}
-  </style>
-  <script>
-    (function () {
-      const SUPPORTED = ['uk','en','de','es','fr'];
-
-      // Helper: normalize lang -> base code (e.g. 'en-US' -> 'en')
-      const base = s => (s||'').toLowerCase().split('-')[0];
-
-      // Read candidates: query ?lang=, localStorage, navigator.languages
-      const url = new URL(location.href);
-      let cand = base(url.searchParams.get('lang'));
-
-      try {
-        if (!cand) cand = base(localStorage.getItem('lang'));
-      } catch(e){}
-
-      if (!cand) {
-        const nav = (navigator.languages && navigator.languages.length)
-          ? navigator.languages : [navigator.language || 'en'];
-        for (const l of nav) {
-          const b = base(l);
-          if (b === 'ua') { cand = 'uk'; break; }          // map ua -> uk
-          if (SUPPORTED.includes(b)) { cand = b; break; }
-        }
-      }
-
-      if (cand === 'ua') cand = 'uk';
-      if (!SUPPORTED.includes(cand)) cand = 'en';
-
-      // Persist choice (so наступні візити не питають)
-      try { localStorage.setItem('lang', cand); } catch(e){}
-
-      // Compute base path (works for domain root "/" and for "/repo/")
-      // Example: "/repo/index.html" -> "/repo/"; "/" -> "/"
-      const basePath = location.pathname.endsWith('/')
-        ? location.pathname
-        : location.pathname.replace(/[^\/]*$/, '');
-
-      // Build target URL: /<lang>/ + keep other params (except ?lang) + hash
-      const target = new URL(location.href);
-      target.pathname = basePath.replace(/\/+$/,'/') + cand + '/';
-      target.searchParams.delete('lang');
-      const href = target.toString();
-
-      // Redirect
-      location.replace(href);
-    })();
-  </script>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Presidency Clock</title>
+<meta name="description" content="Countdown to the constitutional end of the current U.S. presidential term.">
+<link rel="icon" href="./assets/logo.svg">
+<link rel="stylesheet" href="./css/style.css">
+<link rel="canonical" href="https://presidencyclock.com/">
 </head>
 <body>
-  <div class="box">
-    <h1>Redirecting…</h1>
-    <p>If you are not redirected automatically, choose your language:</p>
-    <p>
-      <a href="./uk/">Українська</a> ·
-      <a href="./en/">English</a> ·
-      <a href="./de/">Deutsch</a> ·
-      <a href="./es/">Español</a> ·
-      <a href="./fr/">Français</a>
-    </p>
-  </div>
-  <noscript>
-    <meta http-equiv="refresh" content="0; url=./en/">
-  </noscript>
+<header>
+  <img src="./assets/logo.svg" alt="Presidency Clock logo" width="160" height="40" loading="eager">
+  <nav>
+    <a href="./index.html" class="active">Home</a>
+    <a href="./pages/evergreen.html" data-i18n="evergreen"></a>
+    <a href="./pages/digest.html" data-i18n="digest"></a>
+    <a href="./pages/about.html" data-i18n="about"></a>
+    <a href="./pages/privacy.html" data-i18n="privacy"></a>
+    <a href="./pages/contact.html" data-i18n="contact"></a>
+  </nav>
+</header>
+
+<main class="container">
+  <!-- Герой-блок з таймером, звуками, шарингом і віджетом -->
+  <section class="hero card">
+    <h1 data-i18n="title"></h1>
+    <p class="muted" data-i18n="sub"></p>
+
+    <div class="countdown" aria-live="polite" aria-label="countdown">
+      <div class="tile" id="days"><div class="num">0</div><div class="lbl">Days</div></div>
+      <div class="tile" id="hours"><div class="num">00</div><div class="lbl">Hours</div></div>
+      <div class="tile" id="minutes"><div class="num">00</div><div class="lbl">Minutes</div></div>
+      <div class="tile" id="seconds"><div class="num">00</div><div class="lbl" data-i18n="seconds"></div></div>
+    </div>
+
+    <div class="controls">
+      <span class="badge" data-i18n="selectSound"></span>
+      <button class="btn sound-option" data-mode="tick" data-i18n="tickSound" aria-pressed="true"></button>
+      <button class="btn sound-option" data-mode="beep" data-i18n="beepSound" aria-pressed="false"></button>
+      <button id="mute-btn" class="btn" data-i18n="unmute"></button>
+
+      <div class="lang-switch" aria-label="language" style="margin-left:auto">
+        <button class="btn" data-lang="en">EN</button>
+        <button class="btn" data-lang="uk">UK</button>
+        <button class="btn" data-lang="es">ES</button>
+        <button class="btn" data-lang="fr">FR</button>
+        <button class="btn" data-lang="de">DE</button>
+      </div>
+    </div>
+
+    <div class="share">
+      <a id="share-x" class="btn" target="_blank" rel="noopener" data-i18n="shareX"></a>
+      <a id="share-fb" class="btn" target="_blank" rel="noopener" data-i18n="shareFB"></a>
+      <button id="copy-embed" class="btn" data-i18n="copy"></button>
+    </div>
+
+    <small class="muted" data-i18n="termsNote"></small>
+  </section>
+
+  <!-- 3 рекламні слоти — заміни плейсхолдери на свій AdSense код -->
+  <section class="ads">
+    <div class="ad-box" id="ad-1">Ad slot 1 — 300×250</div>
+    <div class="ad-box" id="ad-2">Ad slot 2 — 300×250</div>
+    <div class="ad-box" id="ad-3">Ad slot 3 — 728×90</div>
+  </section>
+</main>
+
+<footer class="container">
+  <small class="muted">
+    <span data-i18n="madeWith"></span> ♥ <span data-i18n="in"></span> <span data-i18n="kyiv"></span> ·
+    <a href="./pages/privacy.html" data-i18n="privacy"></a> ·
+    <a href="./pages/contact.html" data-i18n="contact"></a>
+  </small>
+</footer>
+
+<script src="./js/i18n.js"></script>
+<script src="./js/audio.js"></script>
+<script src="./js/app.js"></script>
 </body>
 </html>
