--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Presidency Clock</title>
 <meta name="description" content="Countdown to the constitutional end of the current U.S. presidential term.">
-<link rel="icon" href="./assets/logo.svg">
-<link rel="stylesheet" href="./css/style.css">
+<link rel="icon" href="/assets/logo.svg">
+<link rel="stylesheet" href="/css/style.css?v=3">
 <link rel="canonical" href="https://presidencyclock.com/">
 </head>
 <body>
 <header>
-  <img src="./assets/logo.svg" alt="Presidency Clock logo" width="160" height="40" loading="eager">
+  <img src="/assets/logo.svg" alt="Presidency Clock logo" width="160" height="40" loading="eager">
   <nav>
-    <a href="./index.html" class="active">Home</a>
-    <a href="./pages/evergreen.html" data-i18n="evergreen"></a>
-    <a href="./pages/digest.html" data-i18n="digest"></a>
-    <a href="./pages/about.html" data-i18n="about"></a>
-    <a href="./pages/privacy.html" data-i18n="privacy"></a>
-    <a href="./pages/contact.html" data-i18n="contact"></a>
+    <a href="/index.html" class="active">Home</a>
+    <a href="/pages/evergreen.html" data-i18n="evergreen"></a>
+    <a href="/pages/digest.html" data-i18n="digest"></a>
+    <a href="/pages/about.html" data-i18n="about"></a>
+    <a href="/pages/privacy.html" data-i18n="privacy"></a>
+    <a href="/pages/contact.html" data-i18n="contact"></a>
   </nav>
 </header>
 
 <main class="container">
-  <!-- Герой-блок з таймером, звуками, шарингом і віджетом -->
+  <!-- Герой-блок з таймером, звуками, шарингом і кодом віджета -->
   <section class="hero card">
     <h1 data-i18n="title"></h1>
     <p class="muted" data-i18n="sub"></p>
@@ -70,13 +70,13 @@
 <footer class="container">
   <small class="muted">
     <span data-i18n="madeWith"></span> ♥ <span data-i18n="in"></span> <span data-i18n="kyiv"></span> ·
-    <a href="./pages/privacy.html" data-i18n="privacy"></a> ·
-    <a href="./pages/contact.html" data-i18n="contact"></a>
+    <a href="/pages/privacy.html" data-i18n="privacy"></a> ·
+    <a href="/pages/contact.html" data-i18n="contact"></a>
   </small>
 </footer>
 
-<script src="./js/i18n.js"></script>
-<script src="./js/audio.js"></script>
-<script src="./js/app.js"></script>
+<script src="/js/i18n.js?v=3"></script>
+<script src="/js/audio.js?v=3"></script>
+<script src="/js/app.js?v=3"></script>
 </body>
 </html>
