--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
   </small>
 </footer>
 
-<script src="/js/i18n.js?v=3"></script>
-<script src="/js/audio.js?v=3"></script>
-<script src="/js/app.js?v=3"></script>
+<link rel="stylesheet" href="/css/style.css?v=4">
+<script src="/js/i18n.js?v=4"></script>
+<script src="/js/audio.js?v=4"></script>
+<script src="/js/app.js?v=4"></script>
 </body>
 </html>
