--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header>
   <img src="/assets/logo.svg" alt="Presidency Clock logo" width="160" height="40" loading="eager">
   <nav>
-    <a href="/index.html" class="active">Home</a>
+    <a href="/index.html" class="active" data-i18n="home"></a>
     <a href="/pages/evergreen.html" data-i18n="evergreen"></a>
     <a href="/pages/digest.html" data-i18n="digest"></a>
     <a href="/pages/about.html" data-i18n="about"></a>
