--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <link rel="icon" href="/assets/logo.svg">
 <link rel="stylesheet" href="/css/style.css?v=3">
 <link rel="canonical" href="https://presidencyclock.com/">
+  <meta property="og:title" content="Presidency Clock — Time left in Donald Trump’s presidency">
+<meta property="og:description" content="Countdown to the constitutional end of the current U.S. presidential term (12:00 ET, Jan 20, 2029).">
+<meta property="og:url" content="https://presidencyclock.com/">
+<meta property="og:image" content="https://presidencyclock.com/assets/og.png">
+<meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
 <header>
