--- a/index.html
+++ b/index.html
@@ -18,51 +18,51 @@
 <header>
   <img src="/assets/logo.svg" alt="Presidency Clock logo" width="160" height="40" loading="eager">
   <nav>
-    <a href="/index.html" class="active" data-i18n="home"></a>
-    <a href="/pages/evergreen.html" data-i18n="evergreen"></a>
-    <a href="/pages/digest.html" data-i18n="digest"></a>
-    <a href="/pages/about.html" data-i18n="about"></a>
-    <a href="/pages/privacy.html" data-i18n="privacy"></a>
-    <a href="/pages/contact.html" data-i18n="contact"></a>
+  <a href="/index.html" class="active" data-i18n="home"></a>
+  <a href="/pages/evergreen.html" data-i18n="evergreen"></a>
+  <a href="/pages/digest.html" data-i18n="digest"></a>
+  <a href="/pages/about.html" data-i18n="about"></a>
+  <a href="/pages/privacy.html" data-i18n="privacy"></a>
+  <a href="/pages/contact.html" data-i18n="contact"></a>
   </nav>
 </header>
 
 <main class="container">
   <!-- Герой-блок з таймером, звуками, шарингом і кодом віджета -->
   <section class="hero card">
-    <h1 data-i18n="title"></h1>
-    <p class="muted" data-i18n="sub"></p>
+  <h1 data-i18n="title"></h1>
+  <p class="muted" data-i18n="sub"></p>
 
-    <div class="countdown" aria-live="polite" aria-label="countdown">
-      <div class="tile" id="days"><div class="num">0</div><div class="lbl">Days</div></div>
-      <div class="tile" id="hours"><div class="num">00</div><div class="lbl">Hours</div></div>
-      <div class="tile" id="minutes"><div class="num">00</div><div class="lbl">Minutes</div></div>
-      <div class="tile" id="seconds"><div class="num">00</div><div class="lbl" data-i18n="seconds"></div></div>
+  <div class="countdown" aria-live="polite" aria-label="countdown">
+    <div class="tile" id="days"><div class="num">0</div><div class="lbl">Days</div></div>
+    <div class="tile" id="hours"><div class="num">00</div><div class="lbl">Hours</div></div>
+    <div class="tile" id="minutes"><div class="num">00</div><div class="lbl">Minutes</div></div>
+    <div class="tile" id="seconds"><div class="num">00</div><div class="lbl" data-i18n="seconds"></div></div>
+  </div>
+
+  <div class="controls">
+    <span class="badge" data-i18n="selectSound"></span>
+    <button class="btn sound-option" data-mode="tick" data-i18n="tickSound" aria-pressed="true"></button>
+    <button class="btn sound-option" data-mode="beep" data-i18n="beepSound" aria-pressed="false"></button>
+    <button id="mute-btn" class="btn" data-i18n="unmute"></button>
+
+    <div class="lang-switch" style="margin-left:auto">
+      <button class="btn" data-lang="en">EN</button>
+      <button class="btn" data-lang="uk">UK</button>
+      <button class="btn" data-lang="es">ES</button>
+      <button class="btn" data-lang="fr">FR</button>
+      <button class="btn" data-lang="de">DE</button>
     </div>
+  </div>
 
-    <div class="controls">
-      <span class="badge" data-i18n="selectSound"></span>
-      <button class="btn sound-option" data-mode="tick" data-i18n="tickSound" aria-pressed="true"></button>
-      <button class="btn sound-option" data-mode="beep" data-i18n="beepSound" aria-pressed="false"></button>
-      <button id="mute-btn" class="btn" data-i18n="unmute"></button>
+  <div class="share">
+    <a id="share-x" class="btn" target="_blank" rel="noopener" data-i18n="shareX"></a>
+    <a id="share-fb" class="btn" target="_blank" rel="noopener" data-i18n="shareFB"></a>
+    <button id="copy-embed" class="btn" data-i18n="copy"></button>
+  </div>
 
-      <div class="lang-switch" aria-label="language" style="margin-left:auto">
-        <button class="btn" data-lang="en">EN</button>
-        <button class="btn" data-lang="uk">UK</button>
-        <button class="btn" data-lang="es">ES</button>
-        <button class="btn" data-lang="fr">FR</button>
-        <button class="btn" data-lang="de">DE</button>
-      </div>
-    </div>
-
-    <div class="share">
-      <a id="share-x" class="btn" target="_blank" rel="noopener" data-i18n="shareX"></a>
-      <a id="share-fb" class="btn" target="_blank" rel="noopener" data-i18n="shareFB"></a>
-      <button id="copy-embed" class="btn" data-i18n="copy"></button>
-    </div>
-
-    <small class="muted" data-i18n="termsNote"></small>
-  </section>
+  <small class="muted" data-i18n="termsNote"></small>
+</section>
 
   <!-- 3 рекламні слоти — заміни плейсхолдери на свій AdSense код -->
   <section class="ads">
@@ -80,9 +80,9 @@
   </small>
 </footer>
 
-<link rel="stylesheet" href="/css/style.css?v=5">
-<script src="/js/i18n.js?v=5"></script>
-<script src="/js/audio.js?v=5"></script>
-<script src="/js/app.js?v=5"></script>
+<link rel="stylesheet" href="/css/style.css?v=7">
+<script src="/js/i18n.js?v=7"></script>
+<script src="/js/audio.js?v=7"></script>
+<script src="/js/app.js?v=7"></script>
 </body>
 </html>
