--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ footer{border-top:1px solid var(--card-border);border-bottom:none;color:var(--mu
   <img src="/assets/logo.svg" alt="Presidency Clock logo" height="32">
   <nav>
     <a href="/index.html" class="active" data-i18n="home"></a>
-    <a href="/pages/evergreen.html" data-i18n="evergreen"></a>
+    <a href="/pages/evergreen.html" data-i18n="presidents"></a>
     <a href="/pages/digest.html" data-i18n="digest"></a>
     <a href="/pages/about.html" data-i18n="about"></a>
     <a href="/pages/privacy.html" data-i18n="privacy"></a>
