--- a/index.html
+++ b/index.html
@@ -90,7 +90,71 @@ footer{border-top:1px solid var(--card-border);border-bottom:none;color:var(--mu
 
 <script>
 /* i18n (вбудовано) */
-const I18N={
+<script>
+// i18n — повний словник із "presidents"
+const I18N = {
+  en:{home:"home", presidents:"presidents & terms", digest:"digest", about:"about", privacy:"privacy", contact:"contact",
+      title:"Time left in Donald Trump’s presidency",
+      sub:"U.S. presidential terms end at 12:00 noon ET on January 20 (Twentieth Amendment).",
+      seconds:"Seconds", selectSound:"Sound", tickSound:"Ticking", beepSound:"Digital beep",
+      enable:"Enable sound", unmute:"Unmute", mute:"Mute",
+      shareX:"Share on X", shareFB:"Share on Facebook", copy:"Copy code", copied:"Copied!",
+      madeWith:"Made with", in:"in", kyiv:"Kyiv",
+      termsNote:"Constitutional end of term: 12:00 ET, January 20, 2029.",
+      evTitle:"Leaders by shortest-to-longest time in office",
+      evSubtitle:"United States, Ukraine, Canada, Mexico, Spain, France, Germany",
+      country:{us:"United States", ua:"Ukraine", ca:"Canada", mx:"Mexico", es:"Spain", fr:"France", de:"Germany"},
+      col:{name:"Name", office:"Office", start:"Start", end:"End", days:"Days"} },
+  uk:{home:"головна", presidents:"президенти і терміни", digest:"дайджест", about:"про нас", privacy:"конфіденційність", contact:"зв'язок",
+      title:"Скільки часу залишилося Дональду Трампу на посаді президента США",
+      sub:"Президентський термін у США закінчується о 12:00 за Східним часом 20 січня (Двадцята поправка).",
+      seconds:"Секунди", selectSound:"Звук", tickSound:"Тихий «тік-так»", beepSound:"Електронний біп",
+      enable:"Увімкнути звук", unmute:"Увімкнути", mute:"Вимкнути",
+      shareX:"Поділитися в X", shareFB:"Поділитися у Facebook", copy:"Скопіювати код", copied:"Скопійовано!",
+      madeWith:"Зроблено з", in:"у", kyiv:"Києві",
+      termsNote:"Кінець терміну: 12:00 ET, 20 січня 2029.",
+      evTitle:"Керівники від найкоротшого до найдовшого строку",
+      evSubtitle:"США, Україна, Канада, Мексика, Іспанія, Франція, Німеччина",
+      country:{us:"США", ua:"Україна", ca:"Канада", mx:"Мексика", es:"Іспанія", fr:"Франція", de:"Німеччина"},
+      col:{name:"Ім'я", office:"Посада", start:"Початок", end:"Кінець", days:"Днів"} },
+  es:{home:"inicio", presidents:"presidentes y mandatos", digest:"ai digest", about:"acerca de", privacy:"privacidad", contact:"contacto",
+      title:"Tiempo restante del mandato de Donald Trump",
+      sub:"El mandato presidencial termina a las 12:00 ET el 20 de enero.",
+      seconds:"Segundos", selectSound:"Sonido", tickSound:"Tictac", beepSound:"Pitido digital",
+      enable:"Activar sonido", unmute:"Activar", mute:"Silenciar",
+      shareX:"Compartir en X", shareFB:"Compartir en Facebook", copy:"Copiar código", copied:"¡Copiado!",
+      madeWith:"Hecho con", in:"en", kyiv:"Kyiv",
+      termsNote:"Fin del mandato: 12:00 ET, 20 de enero de 2029.",
+      evTitle:"Líderes por menor a mayor tiempo en el cargo",
+      evSubtitle:"EE. UU., Ucrania, Canadá, México, España, Francia, Alemania",
+      country:{us:"EE. UU.", ua:"Ucrania", ca:"Canadá", mx:"México", es:"España", fr:"Francia", de:"Alemania"},
+      col:{name:"Nombre", office:"Cargo", start:"Inicio", end:"Fin", days:"Días"} },
+  fr:{home:"accueil", presidents:"présidents et mandats", digest:"ai digest", about:"à propos", privacy:"confidentialité", contact:"contact",
+      title:"Temps restant du mandat de Donald Trump",
+      sub:"Le mandat se termine à 12 h (ET) le 20 janvier.",
+      seconds:"Secondes", selectSound:"Son", tickSound:"Tic-tac", beepSound:"Bip numérique",
+      enable:"Activer le son", unmute:"Activer", mute:"Couper",
+      shareX:"Partager sur X", shareFB:"Partager sur Facebook", copy:"Copier le code", copied:"Copié !",
+      madeWith:"Fait avec", in:"à", kyiv:"Kyiv",
+      termsNote:"Fin du mandat : 12:00 ET, 20 janvier 2029.",
+      evTitle:"Dirigeants du plus court au plus long mandat",
+      evSubtitle:"USA, Ukraine, Canada, Mexique, Espagne, France, Allemagne",
+      country:{us:"États-Unis", ua:"Ukraine", ca:"Canada", mx:"Mexique", es:"Espagne", fr:"France", de:"Allemagne"},
+      col:{name:"Nom", office:"Fonction", start:"Début", end:"Fin", days:"Jours"} },
+  de:{home:"start", presidents:"präsidenten & amtszeiten", digest:"ai-digest", about:"über uns", privacy:"datenschutz", contact:"kontakt",
+      title:"Verbleibende Amtszeit von Donald Trump",
+      sub:"Die Amtszeit endet um 12:00 ET am 20. Januar.",
+      seconds:"Sekunden", selectSound:"Sound", tickSound:"Ticken", beepSound:"Digitaler Piepton",
+      enable:"Ton aktivieren", unmute:"Ein", mute:"Aus",
+      shareX:"Auf X teilen", shareFB:"Auf Facebook teilen", copy:"Code kopieren", copied:"Kopiert!",
+      madeWith:"Gemacht mit", in:"in", kyiv:"Kyiv",
+      termsNote:"Amtsende: 12:00 ET, 20. Januar 2029.",
+      evTitle:"Amtszeiten: kürzeste bis längste",
+      evSubtitle:"USA, Ukraine, Kanada, Mexiko, Spanien, Frankreich, Deutschland",
+      country:{us:"USA", ua:"Ukraine", ca:"Kanada", mx:"Mexiko", es:"Spanien", fr:"Frankreich", de:"Deutschland"},
+      col:{name:"Name", office:"Amt", start:"Beginn", end:"Ende", days:"Tage"} }
+};
+</script>
   en:{home:"home",evergreen:"evergreen",digest:"digest",about:"about",privacy:"privacy",contact:"contact",
       title:"Time left in Donald Trump’s presidency",sub:"U.S. presidential terms end at 12:00 noon ET on January 20 (Twentieth Amendment).",
       seconds:"Seconds",selectSound:"Sound",tickSound:"Ticking",beepSound:"Digital beep",enable:"Enable sound",unmute:"Unmute",mute:"Mute",
