--- a/pages/evergreen.html
+++ b/pages/evergreen.html
@@ -51,7 +51,8 @@ th{color:var(--muted);text-transform:uppercase;font-size:12px;letter-spacing:.05
 <footer class="container">
   <small class="badge"><span data-i18n="madeWith"></span> ♥ <span data-i18n="in"></span> <span data-i18n="kyiv"></span></small>
 </footer>
-
-<script src="/js/i18n.js?v=4"></script>
-<script src="/js/evergreen.js?v=4"></script>
-</body></html>
+<!-- i18n -->
+<script src="/js/i18n.js?v=5"></script>
+<!-- evergreen logic (нова версія) -->
+<script src="/js/evergreen.v5.js?v=5"></script>
+</body>
