--- a/pages/evergreen.html
+++ b/pages/evergreen.html
@@ -51,8 +51,10 @@ th{color:var(--muted);text-transform:uppercase;font-size:12px;letter-spacing:.05
 <footer class="container">
   <small class="badge"><span data-i18n="madeWith"></span> ♥ <span data-i18n="in"></span> <span data-i18n="kyiv"></span></small>
 </footer>
-<!-- i18n -->
-<script src="/js/i18n.js?v=5"></script>
-<!-- evergreen logic (нова версія) -->
-<script src="/js/evergreen.v5.js?v=5"></script>
+<!-- i18n словники -->
+<script src="/js/i18n.js?v=6"></script>
+<!-- фолбек-дані, щоб все працювало навіть якщо JSON ще не віддаються -->
+<script src="/js/evergreen.data.js?v=6"></script>
+<!-- основна логіка евергріну (нова версія) -->
+<script src="/js/evergreen.v5.js?v=6"></script>
 </body>
