--- a/privacy.html
+++ b/privacy.html
@@ -1,55 +1,12 @@
-<!doctype html>
-<html lang="uk">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Політика конфіденційності — Presidency Clock</title>
-<meta name="theme-color" content="#f6f8fd">
-<style>
-  body{margin:0;background:#f6f8fd;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#0c1220}
-  .wrap{max-width:900px;margin:40px auto;padding:0 16px}
-  h1{font-size:32px;margin:8px 0 16px}
-  h2{font-size:20px;margin:24px 0 8px}
-  a{color:#3d77ff;text-decoration:none} a:hover{text-decoration:underline}
-  .card{background:#fff;border:1px solid rgba(13,17,23,.12);border-radius:14px;padding:16px}
-  .muted{opacity:.7}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Політика конфіденційності</title>
 </head>
 <body>
-<div class="wrap">
   <h1>Політика конфіденційності</h1>
-  <div class="card">
-    <p class="muted">Останнє оновлення: <time>2025-08-27</time></p>
-
-    <h2>Хто ми</h2>
-    <p>Presidency Clock — простий сайт-лічильник (<a href="https://presidencyclock.com">presidencyclock.com</a>), що показує відлік часу.</p>
-
-    <h2>Файли cookie та аналітика</h2>
-    <ul>
-      <li>Ми використовуємо cookie для збереження налаштувань (мова, тема, звук).</li>
-      <li>Реклама Google AdSense може використовувати cookie та схожі технології для показу персоналізованих оголошень.</li>
-    </ul>
-
-    <h2>Реклама (Google AdSense)</h2>
-    <p>Сторонні постачальники, зокрема Google, показують оголошення на цьому сайті. 
-    Ви можете керувати персоналізацією реклами у налаштуваннях Google: 
-    <a href="https://adssettings.google.com/" rel="noopener" target="_blank">adssettings.google.com</a> 
-    або дізнатися більше про те, як Google використовує дані: 
-    <a href="https://policies.google.com/technologies/ads" rel="noopener" target="_blank">policies.google.com/technologies/ads</a>.</p>
-    <p>Для користувачів ЄЕА/ВБ ми можемо показувати панель згоди (CMP) для вибору цілей обробки.</p>
-
-    <h2>Права користувачів</h2>
-    <p>Залежно від вашої юрисдикції ви можете мати права на доступ, виправлення, видалення або обмеження обробки персональних даних. 
-    Надішліть запит на адресу нижче.</p>
-
-    <h2>Контакти</h2>
-    <p>Email: <a href="mailto:hello@presidencyclock.com">hello@presidencyclock.com</a></p>
-
-    <h2>Зміни цієї політики</h2>
-    <p>Ми можемо періодично оновлювати цю сторінку. Актуальна версія завжди доступна за цією адресою.</p>
-  </div>
-
-  <p style="margin:18px 4px"><a href="/">← На головну</a></p>
-</div>
+  <p>Ми поважаємо вашу приватність. Не збираємо особисті дані, окрім тих, що потрібні для реклами (через AdSense).</p>
 </body>
 </html>
