--- a/index.html
+++ b/index.html
@@ -1,25 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trump Presidency Countdown</title>
-  <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
-  <h1>Час до кінця президентства Трампа</h1>
-  <div id="countdown"></div>
-  <script src="/js/countdown.js"></script>
-
-  <h2>Попередні президенти США</h2>
-  <ul id="presidents"></ul>
-  <script src="/js/presidents.js"></script>
-
-  <h2>Останні новини</h2>
-  <div id="news"></div>
-  <script src="/js/news.js"></script>
-
-  <!-- Місце для реклами AdSense (додай код після схвалення) -->
-  <div id="ad-slot-1"></div>
-</body>
-</html>
+const presidents = {
+  'us': [
+    { name: 'William Henry Harrison', term: '1841 (31 days)' },
+    { name: 'Joe Biden', term: '2021-2025 (4 years)' },
+    { name: 'Donald Trump', term: '2017-2021 (4 years)' }
+  ],
+  'ua': [
+    { name: 'Віктор Ющенко', term: '2005-2010 (5 years)' },
+    { name: 'Леонід Кравчук', term: '1991-1994 (3 years)' }
+  ],
+  'fr': [
+    { name: 'Louis-Napoléon Bonaparte', term: '1848-1852 (4 years)' },
+    { name: 'Charles de Gaulle', term: '1959-1969 (10 years)' }
+  ],
+  'de': [
+    { name: 'Friedrich Ebert', term: '1919-1925 (6 years)' },
+    { name: 'Walter Scheel', term: '1974-1979 (5 years)' }
+  ],
+  'es': [
+    { name: 'Adolfo Suárez', term: '1976-1981 (5 years)' },
+    { name: 'Felipe González', term: '1982-1996 (14 years)' }
+  ],
+  'mx': [
+    { name: 'Guadalupe Victoria', term: '1824-1829 (5 years)' },
+    { name: 'Porfirio Díaz', term: '1876-1911 (35 years)' }
+  ],
+  'ca': [
+    { name: 'John A. Macdonald', term: '1867-1873 (6 years)' },
+    { name: 'Pierre Trudeau', term: '1968-1979 (11 years)' }
+  ],
+  'it': [
+    { name: 'Giuseppe Saragat', term: '1964-1971 (7 years)' },
+    { name: 'Sergio Mattarella', term: '2015-2022 (7 years)' }
+  ]
+};
+const tables = document.getElementById('president-tables');
+for (let country in presidents) {
+  const table = document.createElement('table');
+  table.innerHTML = `
+    <h2>${country.toUpperCase()}</h2>
+    <tr><th>Name</th><th>Term</th></tr>
+    ${presidents[country].sort((a, b) => {
+      const aYears = parseInt(a.term.split(' ')[0]) || 0;
+      const bYears = parseInt(b.term.split(' ')[0]) || 0;
+      return aYears - bYears;
+    }).map(p => `<tr><td>${p.name}</td><td>${p.term}</td></tr>`).join('')}
+  `;
+  tables.appendChild(table);
+}
