--- a/index.html
+++ b/index.html
@@ -1,49 +1,18 @@
-const presidents = {
-  'us': [
-    { name: 'William Henry Harrison', term: '1841 (31 days)' },
-    { name: 'Joe Biden', term: '2021-2025 (4 years)' },
-    { name: 'Donald Trump', term: '2017-2021 (4 years)' }
-  ],
-  'ua': [
-    { name: 'Віктор Ющенко', term: '2005-2010 (5 years)' },
-    { name: 'Леонід Кравчук', term: '1991-1994 (3 years)' }
-  ],
-  'fr': [
-    { name: 'Louis-Napoléon Bonaparte', term: '1848-1852 (4 years)' },
-    { name: 'Charles de Gaulle', term: '1959-1969 (10 years)' }
-  ],
-  'de': [
-    { name: 'Friedrich Ebert', term: '1919-1925 (6 years)' },
-    { name: 'Walter Scheel', term: '1974-1979 (5 years)' }
-  ],
-  'es': [
-    { name: 'Adolfo Suárez', term: '1976-1981 (5 years)' },
-    { name: 'Felipe González', term: '1982-1996 (14 years)' }
-  ],
-  'mx': [
-    { name: 'Guadalupe Victoria', term: '1824-1829 (5 years)' },
-    { name: 'Porfirio Díaz', term: '1876-1911 (35 years)' }
-  ],
-  'ca': [
-    { name: 'John A. Macdonald', term: '1867-1873 (6 years)' },
-    { name: 'Pierre Trudeau', term: '1968-1979 (11 years)' }
-  ],
-  'it': [
-    { name: 'Giuseppe Saragat', term: '1964-1971 (7 years)' },
-    { name: 'Sergio Mattarella', term: '2015-2022 (7 years)' }
-  ]
-};
-const tables = document.getElementById('president-tables');
-for (let country in presidents) {
-  const table = document.createElement('table');
-  table.innerHTML = `
-    <h2>${country.toUpperCase()}</h2>
-    <tr><th>Name</th><th>Term</th></tr>
-    ${presidents[country].sort((a, b) => {
-      const aYears = parseInt(a.term.split(' ')[0]) || 0;
-      const bYears = parseInt(b.term.split(' ')[0]) || 0;
-      return aYears - bYears;
-    }).map(p => `<tr><td>${p.name}</td><td>${p.term}</td></tr>`).join('')}
-  `;
-  tables.appendChild(table);
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Presidency Clock</title>
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+  <div class="container">
+    <h1 data-i18n="title">Time left in Donald Trump’s presidency</h1>
+    <div class="clock" id="countdown"></div>
+    <p data-i18n="sub">U.S. presidential terms end at 12:00 noon ET on January 20.</p>
+  </div>
+  <script src="/js/countdown.js"></script>
+  <script src="/js/i18n.js"></script>
+</body>
+</html>
